2015-07-31 Giuseppe Salamanna <salaman AT cern.ch>
	* data: added lumicalc profile root file for all 50ns periods, 
	85 pb-1, with unPS'd triggers
	* generic_config-mc15.txt: switched to new ilumi profile file
	
2015-07-30 Peter Onyisi <ponyisi AT cern.ch>
	* Add "flat" variables for light leptons, blinding variable (not
	blinded tree yet), object cutflow histograms

2015-07-29 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: PRW hash only for MC. Mu corrected same as Mu default for MC.  
	
2015-07-28 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: changes to the purw tool instance here to write out corrected mu (but doeasn't work yet..). 
	Also add PRWtool Hash to be able to re-generate PU weights with changing mu profile in future
	
2015-07-28 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: fixed bug in lep z0sinTh to vertex correction
	
2015-07-26 Giuseppe Salamanna <salaman AT cern.ch>
	* data: added lumicalc profile root file for all 50ns periods, 85 pb-1 
	* generic_config-mc15.txt: switched to new ilumi profile file
	
2015-07-25 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: adding lepton SF from top SF retriever
	* generic_config-mc15.txt: switched SF calculation on
	
2015-07-24 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: adding eta at EM scale per jet; it's for JVT acceptance cut
	
2015-07-21 David Hohn <david.hohn@cern.ch>
	* wrote own Tau object selector as the top:: one could not be configured to be loose enough.
	* move to Top,2.3.20: no API changes required this time
	* enable builtin pileup reweighting with prelim configs

2015-07-20 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: adding LooseBad per jet; preparing to call PURW, but still commented out for now
	
2015-07-20 David Hohn <david.hohn@cern.ch>